# tauri2-app-blank-vue-db

./: README.md  latest.json  package.json  processAttendance.py  vite.config.ts
src/: App.vue  main.ts  style.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src/assets/styles/: element-var.scss  layout.scss  reset.scss
src/plugins/: index.js
src/utils/: env.js  index.js  setup.js
~/.tauri/: tabvdapp.key  tabvdapp.key.pub
